# rust_api_comisaria

./: .env  Cargo.toml  README.md
.devcontainer/: devcontainer.json
src/: main.rs
src/api_caller/: comisaria_api_caller.rs  mod.rs  ubigeo_api_caller.rs
src/controller/: comisaria_controller.rs  home_controller.rs  mod.rs  ubigeo_controller.rs
src/db/: mod.rs  mongo_db.rs
src/models/: api_exception.rs  comisaria_document.rs  comisaria_response.rs  departamento_request.rs  departamento_response.rs  distrito_document.rs  distrito_response.rs  mod.rs  provincia_document.rs  provincia_response.rs
src/producer/: producer.rs
src/repository/: comisaria_repository.rs  mod.rs  ubigeo_repository.rs
src/routes/: init.rs
src/services/: comisaria_service.rs  mod.rs  ubigeo_service.rs
src/utils/: api_exception_enum.rs  constants.rs  error.rs  mod.rs  util.rs
