[package]
name = "api_comisaria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
axum = { version = "0.6.4", features = ["headers", "macros"] }
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
mongodb = "2.3.1"
rdkafka = { version = "0.29.0", features = ["cmake-build", "ssl", "sasl"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = "0.1.11"
